# memorix

./: .env.example  .gitignore  Caddyfile  README.md  docker-compose.yml  index_folder_rag.py  rag_eval.ipynb  requirements_rag.txt  test_rag.ipynb
backend/: .dockerignore  Dockerfile  __main__.py  pyproject.toml  requirements.txt
backend/core/auth/: password.py  tokens.py
backend/core/configs/: auth.py  backend.py  db.py  deployment.py  llm.py  rag.py  s3.py
backend/core/db/: __init__.py
backend/core/doc_reader/: doc_reader.py
backend/core/files/: __init__.py  repository.py
backend/core/llm/: base_generator.py  openai_client.py  openai_generator.py  prompts.py
backend/core/middleware/: __init__.py  auth.py  auth_middleware.py  monitoring.py
backend/core/monitoring/: requests.py
backend/courses/api/: __init__.py  block_generation.py  courses.py  lesson_generation.py  lessons.py
backend/courses/dao/: __init__.py  analysis_history.py  blocks.py  courses.py  lessons.py  models.py  user_answers.py
backend/courses/schema/: __init__.py  acl.py  blocks.py  courses.py  lessons.py
backend/courses/service/: __init__.py  access_control.py  block_generation.py  course_analysis.py  course_export.py  courses.py  lesson_generation.py  lessons.py  notes.py
backend/documents/api/: __init__.py  documents.py
backend/documents/dao/: __init__.py  documents.py  models.py
backend/documents/indexer/: worker.py
backend/migrations/: README.md  env.py
backend/scripts/: change_user_plan.py  init-migration.sh  qdrant_migration.py  seed_db.py
frontend/: .dockerignore  (+3 more)
(+119 files in other folders)
