[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "aioboto3>=15.5.0",
    "aiosqlite>=0.22.1",
    "alembic==1.12.1",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "boto3>=1.40.61",
    "fastapi==0.104.1",
    "loguru>=0.7.3",
    "openai>=2.14.0",
    "passlib[bcrypt]==1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings==2.10.1",
    "pydantic[email]>=2.12.5",
    "pypdf>=6.5.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "qdrant-client>=1.16.2",
    "sqlalchemy[asyncio]==2.0.23",
    "uvicorn[standard]==0.24.0",
    "markdown>=3.5.0",
]

[dependency-groups]
ai = [
    "langchain==1.1.3",
    "langchain-community==0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-qdrant>=1.1.0",
    "sentence-transformers==5.1.2",
    "torch==2.7.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
